Updating in the process

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: wyraxlfj@ukr.net
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Graphic Designer JavaScript Developer CV and portfolio page"
 keywords: "your keywords, separated by commas"
-skills: "Graphic Designer - JavaScript Developer"
+skills: "Graphic Designer | JavaScript Developer"
 meta_author: LastName FirstName
 
 # Google webmaster tools
@@ -25,29 +25,27 @@ contact: static
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: c2d3e4 #3399cc #18bc9c #80B3FF
+  primary: 9ca9ba #3399cc #18bc9c #80B3FF
   primary-rgb: "51,153,204" #"213,48,99" #"24,288,156" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
 
 # Footer settings
 footer:
-  copyright: Anton "Wyrax" Som,
-  location: Location Footer text
+  copyright: Anton "Wyrax" Som © 2021
+  
+  location: Location
   social: Around the Web
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: customsocial
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+  - title: github
+    url: https://github.com/Wyrax
+
   - title: linkedin
     url: http://bitbucket.org/jekyll
-  - title: github
+  - title: facebook
     url: https://github.com/Wyrax
 
 # Postal address (add as many lines as necessary)
@@ -56,7 +54,7 @@ address:
   - line: '02217'
 
 # Credits content
-credits: 'This page created with Freelancer:<br>a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'This page created with <a href="https://github.com/jeromelachaud/freelancer-theme">Freelancer</a>:<br>a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
 # Build settings
 markdown: kramdown
