ggit: Updated wyrax.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-title: Anton Som
+title: Anton Som Portfolio
+person: Anton Som
 email: wyraxlfj@ukr.net
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Graphic Designer JavaScript Developer CV and portfolio page"
