ggit: Updated wyrax.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: wyraxlfj@ukr.net
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Graphic Designer JavaScript Developer CV and portfolio page"
 keywords: "your keywords, separated by commas"
-skills: "Graphic / Interactive Media Designer | JavaScript Developer"
+skills: "JavaScript&nbsp;Developer | Graphic&nbsp;/&nbsp;Interactive&nbsp;Media&nbsp;Designer"
 meta_author: LastName FirstName
 
 # Google webmaster tools
