ggit: Updated wyrax.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Anton Som Portfolio
 person: Anton Som
 email: wyraxlfj@ukr.net
 url: https://github.com/jeromelachaud/freelancer-theme
-description: "Graphic Designer JavaScript Developer CV and portfolio page"
+description: "JavaScript Developer | Graphic / Interactive Media Designer CV and portfolio page"
 keywords: "your keywords, separated by commas"
 skills: "JavaScript&nbsp;Developer | Graphic&nbsp;/&nbsp;Interactive&nbsp;Media&nbsp;Designer"
 meta_author: LastName FirstName
